fix: overflow-x auto

--- a/webgl/lessons/resources/lesson.css
+++ b/webgl/lessons/resources/lesson.css
@@ -84,6 +84,7 @@ p code {
     margin: 0 auto 1em;
     max-width: 700px;
     width: calc(100% - 40px);
+    overflow-x: auto;
 }
 .lesson-main>.webgl_example_container {
     max-width: 90%;
